kubernetes/mongo-deploymet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: kaleidoplan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:5.0-focal
          args: ["--wiredTigerCacheSizeGB", "0.25"]
          ports:
            - containerPort: 27017
          resources:
            limits:
              cpu: "300m"
              memory: "384Mi"
            requests:
              memory: "128Mi"
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: mongo-config
              mountPath: /data/configdb
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data-pvc
        - name: mongo-config
          persistentVolumeClaim:
            claimName: mongo-config-pvc
